This is heading and Paragrapgh tag

--- a/class 3/index.html
+++ b/class 3/index.html
@@ -12,5 +12,27 @@
     <p>Web development, Graphics dsign , digital marketing Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus nam, optio tempora pariatur rerum iusto recusandae quisquam iure illum odit sapiente nesciunt veniam repellendus provident sunt placeat quae asperiores debitis voluptate velit corrupti?/p>
     <h3>Saylani Help lines...</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus nam, optio tempora pariatur rerum iusto recusandae quisquam iure illum odit sapiente nesciunt veniam repellendus provident sunt placeat quae asperiores debitis voluptate velit corrupti?/p>
+        <p>Welcome to the Sigma Web Development Course - Web Development Tutorials in Hindi playlist! 🗿
+
+📚 About this Playlist:
+Are you interested in learning web development but find most tutorials in English hard to follow? Look no further! This course is entirely in Hindi and is designed to take you from beginner to pro, one step at a time.
+
+👨‍💻 Who is this for?
+
+Beginners who want to dive into web development
+Intermediate developers looking to sharpen their skills
+Anyone who prefers learning in Hindi
+🛠️ What Will You Learn?
+
+HTML, CSS, and JavaScript Basics
+Front-end and Back-end Development
+Database Integration
+Real-world Projects
+And much more!
+🔥 Quality Assurance:
+Rest assured, we've poured our hearts into creating high-quality tutorials for you. The best part? It's absolutely FREE and without any sponsors!
+
+📅 Schedule:
+New videos will be added almost daily, so make sure to subscribe and hit the notification bell 🔔 to stay updated!</p>
 </body>
 </html>
